# CCJ

./: CMakeLists.txt
Original_CCJ/: pseudo_loop.cpp
Sparse_CCJ/: CCJ.cpp  README.md  VM_final.cpp  VM_final.h  W_final.cpp  W_final.h  cmd_line_options.h  pseudo_loop.cpp  trace_arrow.cpp
simfold/: CMakeLists.txt  shape_data.cpp
simfold/include/: constants.h  externs.h  globals.h
simfold/src/common/: common.cpp
simfold/src/simfold/: s_min_folding.cpp  s_multi_loop.cpp  s_stacked_pair.cpp
